@@ -14,6 +14,7 @@ v3.4.3 to
   recognized.
 - (fix) Don't correct the feature of a var. or random 2 to match the
   preceding action 1.
+- Industry production callback version 1.
 
 v3.4.2 to v3.4.3 (r1244)
 - Permit Action 1/2/3 for bridges (Callback 33)
